--- a/views/components/Schedule.ejs
+++ b/views/components/Schedule.ejs
@@ -4,7 +4,7 @@
     class="form-check-input"
     type="checkbox"
     role="switch"
-    id="flexSwitchCheckDefault2"
+    id="schedule-switch"
     data-bs-toggle="collapse"
     data-bs-target="#collapse"
     aria-expanded="false"
@@ -12,7 +12,7 @@
     checked
     onchange="onScheduledSwitchChangeHandler()"
   />
-  <label class="form-check-label text-black" for="flexSwitchCheckDefault2">Now</label>
+  <label class="form-check-label text-black" for="schedule-switch">Now</label>
   <div class="collapse multi-collapse" id="collapse">
     <p style="margin: 20px 0">When ?</p>
     <div class="form-check">
