--- a/views/components/MailingList.ejs
+++ b/views/components/MailingList.ejs
@@ -1,5 +1,5 @@
-<div class="input-group flex-column mb-5">
-  <%-contacts.map((contact) => { return `
+<div class="input-group flex-column mb-5" id="contacts-list">
+  <!-- <%-contacts.map((contact) => { return `
   <div class="form-check ms-3 mailing-list-containers" id="contact-container-${contact.id}">
     <input
       class="form-check-input mailing-list-checkbox border-dark is-invalid"
@@ -14,5 +14,5 @@
     >
     <div class="invalid-feedback contacts-feedback" id="contact-feedback-${contact.id}">Required</div>
   </div>
-  ` }).join('')%>
+  ` }).join('')%> -->
 </div>
