--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -11,7 +11,7 @@
       </p>
     </div>
   </div>
-  <a class="btn btn-primary mb-0 mt-4" href="/sender">Messages Module</a>
+  <a class="btn btn-primary mb-0 mt-4" href="/messages">Messages Module</a>
 </section>
 
 <% } else { %>
