--- a/views/sender.ejs
+++ b/views/sender.ejs
@@ -1,25 +1,24 @@
-
 <section>
   <div class="card align-self-center shadow bg-body rounded" style="width: 30rem">
     <div class="card-body text-start">
       <h5 class="card-title text-center"><strong>Who do you want to send a message to?</strong></h5>
-      <form class="form mt-4 has-validation" novalidate id='message-form' onsubmit='submitHandler(event)'>
-        
-        <%- include('./components/MailingList'); -%>
-        <%- include('./components/Message'); -%>
-        <%- include('./components/Schedule'); -%>
+      <form class="form mt-4 has-validation" novalidate id="message-form">
+        <%- include('./components/MailingList'); -%> <%- include('./components/Message'); -%> <%-
+        include('./components/Schedule'); -%>
 
-        <div class="text-center mt-4" id='btn-cont' style='width: 90%;'>
+        <div class="text-center mt-4" id="btn-cont" style="width: 90%">
           <button type="submit" class="btn btn-success" id="whatsapp">
-            <div class='d-flex flex-row align-content-center justify-content-center'>
-              <span class="material-icons me-2" id='whatsapp-icon' style='justify-content: end; padding: 0;'>whatsapp</span>
-              <p class='p-0 m-0'>WhatsApp</p>
+            <div class="d-flex flex-row align-content-center justify-content-center">
+              <span class="material-icons me-2" id="whatsapp-icon" style="justify-content: end; padding: 0"
+                >whatsapp</span
+              >
+              <p class="p-0 m-0">WhatsApp</p>
             </div>
           </button>
           <button type="submit" class="btn btn-primary" id="sms">
-              <div class='d-flex flex-row align-content-center justify-content-center'>
-                <span class="material-icons me-2" id='sms-icon' style='justify-content: end; padding: 0; '>message</span>
-                <p class='p-0 m-0'>Send SMS</p>
+            <div class="d-flex flex-row align-content-center justify-content-center">
+              <span class="material-icons me-2" id="sms-icon" style="justify-content: end; padding: 0">message</span>
+              <p class="p-0 m-0">Send SMS</p>
             </div>
           </button>
         </div>
@@ -31,17 +30,14 @@
   <p><strong>*</strong>This page is private and protected</p>
 </footer>
 
-<div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11" >
-  <div id="notification" class="toast" role="alert"
-   aria-live="assertive" aria-atomic="true">
+<div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+  <div id="notification" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
     <div class="toast-header">
       <strong class="me-auto">New notification</strong>
       <small>Just Now</small>
       <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
     </div>
-    <div class="toast-body text-light" id='toast-text'/>
+    <div class="toast-body text-light" id="toast-text"></div>
   </div>
 </div>
-
-
-
+<script src="/js/schedule.js" type="module"></script>
