--- a/views/layouts/default.ejs
+++ b/views/layouts/default.ejs
@@ -27,23 +27,15 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-auth.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js" defer></script>
     <script src="https://www.gstatic.com/firebasejs/ui/6.0.0/firebase-ui-auth.js" defer></script>
-    <script src="./js/firebase.js" defer></script>
-    <script src="./js/toast.js" defer></script>
-    <% if(title === 'Profile Page') { %>
-    <script src="/js/profile.js" defer></script>
-    <% } else if(title === 'Messages Page') { %>
-    <script src="/js/sender.js" defer></script>
-    <script src="/js/mailingList.js" defer></script>
-    <script src="/js/message.js" defer></script>
-    <script src="/js/schedule.js" defer></script>
-    <% } %>
+    <script src="./js/index.js" type="module" defer></script>
   </head>
   <body>
-    <%- include('../components/NavBar'); -%>
+    <%- include('../components/MainMenu'); -%>
     <main><%- body %></main>
     <%- include('../components/Toast'); -%> <% if(title === 'Profile Page' || title === 'Messages Page') { %>
     <footer>
