--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,5 @@
+<%- include('./components/Spinner'); -%>
+<br />
 <br />
 <h3>This page is public</h3>
 <section class="m-5 p-5">
@@ -7,7 +9,7 @@
     style="padding: 8px 35px"
     data-toggle="modal"
     data-target="#exampleModal"
-    href="/login"
+    id="login-button"
   >
     Login
   </a>
