--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,3 @@
-/* MVP.css v1.5 - https://github.com/andybrewer/mvp */
-
 :root {
   --border-radius: 0px;
   --box-shadow: 2px 2px 10px;
@@ -20,13 +18,15 @@
   --justify-important: center;
   --justify-normal: left;
   --line-height: 150%;
-  --width-card: 285px;
+  --width-card: 300px;
   --width-card-medium: 460px;
   --width-card-wide: 800px;
   --width-content: 1080px;
+  --font-size: 16px;
+  --font-size-small: 14px;
 }
 
-/*
+/* 
 @media (prefers-color-scheme: dark) {
   :root {
       --color: #0097fc;
@@ -50,6 +50,7 @@ body {
   margin: 0;
   overflow-x: hidden;
   padding: 0;
+  font-size: var(--font-size);
 }
 
 footer,
@@ -57,9 +58,14 @@ header,
 main {
   margin: auto;
   max-width: var(--width-content);
-  padding: 2rem 1rem;
+  padding: auto;
   text-align: center;
   font-family: var(--font);
+}
+
+section {
+  margin: 1rem 1.5rem;
+  padding: 0.5rem;
 }
 
 footer {
@@ -68,6 +74,26 @@ footer {
   position: fixed;
   bottom: 0;
   left: 41.5%;
+  font-size: 10px;
+}
+
+.table-text {
+  font-size: 11px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+    'Helvetica Neue', sans-serif;
+}
+.table-headers {
+  font-size: 12px;
+}
+#dtBasicExample {
+  max-width: 100vw;
+}
+
+#main-spinner {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 h2 {
@@ -78,8 +104,21 @@ h2 {
   color: var(--color-text-titles);
 }
 
+.card {
+  margin: 0 auto;
+  width: var(--width-card);
+  font-size: var(--font-size-small);
+}
+.navbar {
+  height: 10vh;
+}
 .nav-link:hover .tooltip-txt {
   visibility: visible;
+}
+
+.mailing-list-containers {
+  padding: 0;
+  margin: 0;
 }
 
 .nav-link .tooltip-txt::after {
@@ -120,10 +159,6 @@ h2 {
 
 #liveToastBtn {
   cursor: pointer;
-}
-section {
-  display: flex;
-  flex-direction: column;
 }
 
 /* Headers */
@@ -168,8 +203,8 @@ ul li {
 a {
   text-decoration: none;
   width: fit-content;
-  margin: auto;
 }
+
 a:hover {
   filter: brightness(var(--hover-brightness));
 }
@@ -216,6 +251,10 @@ button:hover {
   font-size: 48px;
 }
 
+.mailing-list-checkbox {
+  width: 20px;
+}
+
 @-moz-keyframes spin {
   100% {
     -moz-transform: rotate(-180deg);
@@ -255,4 +294,14 @@ button:hover {
   #sms-icon {
     font-size: 15px;
   }
+}
+
+#test {
+  width: 100vw;
+  height: 5vh;
+  background-color: red;
+}
+
+#btn-menu {
+  display: inherit;
 }
