--- a/views/components/Message.ejs
+++ b/views/components/Message.ejs
@@ -1,29 +1,12 @@
 <p class="ms-3 mt-3 mb-1"><strong> Message:</strong></p>
-<div class="form-check form-switch">
-  <input
-    class="form-check-input ms-1"
-    type="checkbox"
-    role="switch"
-    id="message-switch"
-    data-bs-toggle="collapse"
-    data-bs-target="#message"
-    aria-expanded="false"
-    aria-controls="message"
-    checked
-  />
+<div class="form-check form-switch mb-3">
+  <input class="form-check-input ms-1" type="checkbox" role="switch" id="message-switch" checked />
   <label class="form-check-label ms-2 text-black" for="message-switch">Default</label>
 </div>
-<div class="collapse multi-collapse" id="message">
+<div class="collapse multi-collapse mb-1" id="message">
   <div class="form-floating mb-3" id="message-container">
-    <textarea
-      class="form-control"
-      id="message-input"
-      rows="3"
-      id="floatingInput"
-      placeholder="Enter your message here"
-      required
-    ></textarea>
-    <label for="floatingInputInvalid">Enter your message here</label>
-    <div class="invalid-feedback" id="message-feedback-id">Message cannot be empty</div>
+    <textarea class="form-control mb-1" id="message-input" rows="3" required></textarea>
+    <label class="mb-3" for="floatingInputInvalid">Enter your message here</label>
+    <div class="invalid-feedback mb-1" id="message-feedback-id">Message cannot be empty</div>
   </div>
 </div>
