--- a/views/components/Schedule.ejs
+++ b/views/components/Schedule.ejs
@@ -1,18 +1,8 @@
 <p class="ms-3 mt-3 mb-1"><strong>Scheduled:</strong></p>
-<div class="form-check form-switch mt-1 ms-5">
-  <input
-    class="form-check-input"
-    type="checkbox"
-    role="switch"
-    id="schedule-switch"
-    data-bs-toggle="collapse"
-    data-bs-target="#collapse"
-    aria-expanded="false"
-    aria-controls="collapse"
-    checked
-  />
+<div class="form-check form-switch">
+  <input class="form-check-input ms-1" type="checkbox" role="switch" id="schedule-switch" checked />
   <label class="form-check-label text-black" for="schedule-switch">Now</label>
-  <div class="collapse multi-collapse" id="collapse">
+  <div class="collapse multi-collapse" id="schedule-collapse">
     <p style="margin: 20px 0">When ?</p>
     <div class="form-check">
       <input class="text-center" id="datePicker" type="datetime-local" />
