--- a/views/sender.ejs
+++ b/views/sender.ejs
@@ -1,5 +1,5 @@
 <section>
-  <div class="card align-self-center shadow bg-body rounded" style="width: 30rem">
+  <div class="card align-self-center shadow bg-body rounded border-0" style="width: 30rem">
     <div class="card-body text-start">
       <h5 class="card-title text-center"><strong>Who do you want to send a message to?</strong></h5>
       <form class="form mt-4 has-validation" novalidate id="message-form">
@@ -7,19 +7,36 @@
         include('./components/Schedule'); -%>
 
         <div class="text-center mt-4" id="btn-cont" style="width: 90%">
-          <button type="submit" class="btn btn-success" id="whatsapp">
-            <div class="d-flex flex-row align-content-center justify-content-center">
-              <span class="material-icons me-2" id="whatsapp-icon" style="justify-content: end; padding: 0"
-                >whatsapp</span
-              >
-              <p class="p-0 m-0">WhatsApp</p>
-            </div>
+          <button
+            type="submit"
+            class="btn btn-primary border-0"
+            id="email"
+            style="background-color: #dd4b39; min-width: 6rem"
+            role="button"
+            disabled
+          >
+            <i class="fab fa-google"></i>
           </button>
-          <button type="submit" class="btn btn-primary" id="sms">
-            <div class="d-flex flex-row align-content-center justify-content-center">
-              <span class="material-icons me-2" id="sms-icon" style="justify-content: end; padding: 0">message</span>
-              <p class="p-0 m-0">Send SMS</p>
-            </div>
+
+          <button
+            type="submit"
+            class="btn btn-primary border-0"
+            id="whatsapp"
+            style="background-color: #25d366; min-width: 6rem"
+            role="button"
+            disabled
+          >
+            <i class="fab fa-whatsapp"></i>
+          </button>
+          <button
+            type="submit"
+            class="btn btn-primary border-0"
+            id="sms"
+            style="min-width: 6rem"
+            role="button"
+            disabled
+          >
+            <i class="fas fa-sms"></i>
           </button>
         </div>
       </form>
@@ -40,4 +57,3 @@
     <div class="toast-body text-light" id="toast-text"></div>
   </div>
 </div>
-<script src="/js/schedule.js" type="module"></script>
