--- a/views/users.ejs
+++ b/views/users.ejs
@@ -1,121 +1,50 @@
-<section>
-  <!-- <div class="card align-self-center shadow bg-body rounded" style="width: 30rem">
-    <div class="card-body text-start"> -->
-  <table id="dtBasicExample" class="table table-striped table-bordered" cellspacing="0" width="100%">
-    <thead>
-      <tr>
-        <th class="th-sm">Name</th>
-        <th class="th-sm">Position</th>
-        <th class="th-sm">Office</th>
-        <th class="th-sm">Age</th>
-        <th class="th-sm">Start date</th>
-        <th class="th-sm">Salary</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Tiger Nixon</td>
-        <td>System Architect</td>
-        <td>Edinburgh</td>
-        <td>61</td>
-        <td>2011/04/25</td>
-        <td>$320,800</td>
-      </tr>
-      <tr>
-        <td>Garrett Winters</td>
-        <td>Accountant</td>
-        <td>Tokyo</td>
-        <td>63</td>
-        <td>2011/07/25</td>
-        <td>$170,750</td>
-      </tr>
-      <tr>
-        <td>Ashton Cox</td>
-        <td>Junior Technical Author</td>
-        <td>San Francisco</td>
-        <td>66</td>
-        <td>2009/01/12</td>
-        <td>$86,000</td>
-      </tr>
-      <tr>
-        <td>Cedric Kelly</td>
-        <td>Senior Javascript Developer</td>
-        <td>Edinburgh</td>
-        <td>22</td>
-        <td>2012/03/29</td>
-        <td>$433,060</td>
-      </tr>
-      <tr>
-        <td>Airi Satou</td>
-        <td>Accountant</td>
-        <td>Tokyo</td>
-        <td>33</td>
-        <td>2008/11/28</td>
-        <td>$162,700</td>
-      </tr>
-      <tr>
-        <td>Brielle Williamson</td>
-        <td>Integration Specialist</td>
-        <td>New York</td>
-        <td>61</td>
-        <td>2012/12/02</td>
-        <td>$372,000</td>
-      </tr>
-      <tr>
-        <td>Herrod Chandler</td>
-        <td>Sales Assistant</td>
-        <td>San Francisco</td>
-        <td>59</td>
-        <td>2012/08/06</td>
-        <td>$137,500</td>
-      </tr>
-      <tr>
-        <td>Rhona Davidson</td>
-        <td>Integration Specialist</td>
-        <td>Tokyo</td>
-        <td>55</td>
-        <td>2010/10/14</td>
-        <td>$327,900</td>
-      </tr>
-      <tr>
-        <td>Colleen Hurst</td>
-        <td>Javascript Developer</td>
-        <td>San Francisco</td>
-        <td>39</td>
-        <td>2009/09/15</td>
-        <td>$205,500</td>
-      </tr>
-      <tr>
-        <td>Sonya Frost</td>
-        <td>Software Engineer</td>
-        <td>Edinburgh</td>
-        <td>23</td>
-        <td>2008/12/13</td>
-        <td>$103,600</td>
-      </tr>
-    </tbody>
-    <tfoot>
-      <tr>
-        <th>Name</th>
-        <th>Position</th>
-        <th>Office</th>
-        <th>Age</th>
-        <th>Start date</th>
-        <th>Salary</th>
-      </tr>
-    </tfoot>
-  </table>
+<%- include('./components/Spinner'); -%>
+<section class="w-100 m-0">
+  <div class="card shadow rounded m-0 p-0 w-100 border-0">
+    <div class="card-body text-start">
+      <table
+        id="dtBasic"
+        class="table table-striped table-bordered display compact table-hover table-auto table-responsive"
+        cellspacing="0"
+        width="100%"
+      >
+        <thead class="table-headers text-center">
+          <tr>
+            <th class="th">Nr</th>
+            <th class="th">uid</th>
+            <th class="th">Name</th>
+            <th class="th">Email</th>
+            <th class="th">Phone Number</th>
+            <th class="th">Photo URL</th>
+            <th class="th">Provider</th>
+            <th class="th">Creation Time</th>
+            <th class="th">Last Login</th>
+            <th class="th">Admin</th>
+          </tr>
+        </thead>
+        <tbody class="table-text text-center">
+          <% if(users){ %> <% users.map((user,index) => { %>
+          <tr class="table-row" id='<%= "table-row-"+ index %>' style="cursor: pointer">
+            <td class="td"><%- index + 1 || '' -%></td>
+            <td class="td text-start" style="max-width: 80px"><%- user.uid -%></td>
+            <td class="td"><%- user.displayName || '' -%></td>
+            <td class="td"><%- user.email || '' -%></td>
+            <td class="td"><%- user.phoneNumber || '' -%></td>
+            <td class="td"><%- user.photoUrl || '' -%></td>
+            <td class="td"><%- user.provider || '' -%></td>
+            <td class="td"><%- user.metadata.creationTime || '' -%></td>
+            <td class="td"><%- user.metadata.lastSignInTime || '' -%></td>
+            <td class="td">
+              <%if(user.admin){%>
+              <i class="fas fa-check text-success" style="font-size: 1.2rem"></i>
+              <%} else {%>
+              <i class="fas fa-times text-danger" style="font-size: 1.2rem"></i>
+              <%}%>
+            </td>
+          </tr>
+          <% }) %> <%}%>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </section>
-<footer>
-  <p><strong>*</strong>This page is private and protected</p>
-</footer>
-
-<script src="/js/users.js" type="module"></script>
-
-<!-- <%-users.map((user,index) => { return `
-      <div class="form-check ms-3 mailing-list-containers" id="users-container-${user.id}">
-        <label class="form-check-label text-black" style="padding: 0 10px" for="user${user.id}"
-          >${index+1}. ${user.name}</label
-        >
-      </div>
-      ` }).join('')%> -->
