--- a/views/components/Message.ejs
+++ b/views/components/Message.ejs
@@ -4,9 +4,19 @@
   <label class="form-check-label ms-2 text-black" for="message-switch">Default</label>
 </div>
 <div class="collapse multi-collapse mb-1" id="message">
+  <div class="form-floating mb-3 collapse multi-collapse" id="subject-container">
+    <input type="text" class="form-control" id="subject" placeholder="Subject" />
+    <label class="mb-3" for="subject">Subject</label>
+  </div>
   <div class="form-floating mb-3" id="message-container">
-    <textarea class="form-control mb-1" id="message-input" rows="3" required></textarea>
-    <label class="mb-3" for="floatingInputInvalid">Enter your message here</label>
+    <textarea
+      class="form-control mt-3"
+      id="message-input"
+      rows="3"
+      placeholder="Enter your message here"
+      required
+    ></textarea>
+    <label class="mb-3" for="message-input">Enter your message here</label>
     <div class="invalid-feedback mb-1" id="message-feedback-id">Message cannot be empty</div>
   </div>
 </div>
