--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
     style="padding: 8px 35px"
     data-toggle="modal"
     data-target="#exampleModal"
+    href="/login"
     id="login-button"
   >
     Login
