--- a/views/users.ejs
+++ b/views/users.ejs
@@ -1,50 +1,58 @@
 <%- include('./components/Spinner'); -%>
 <section class="w-100 m-0">
-  <div class="card shadow rounded m-0 p-0 w-100 border-0">
-    <div class="card-body text-start">
-      <table
-        id="dtBasic"
-        class="table table-striped table-bordered display compact table-hover table-auto table-responsive"
-        cellspacing="0"
-        width="100%"
-      >
-        <thead class="table-headers text-center">
-          <tr>
-            <th class="th">Nr</th>
-            <th class="th">uid</th>
-            <th class="th">Name</th>
-            <th class="th">Email</th>
-            <th class="th">Phone Number</th>
-            <th class="th">Photo URL</th>
-            <th class="th">Provider</th>
-            <th class="th">Creation Time</th>
-            <th class="th">Last Login</th>
-            <th class="th">Admin</th>
-          </tr>
-        </thead>
-        <tbody class="table-text text-center">
-          <% if(users){ %> <% users.map((user,index) => { %>
-          <tr class="table-row" id='<%= "table-row-"+ index %>' style="cursor: pointer">
-            <td class="td"><%- index + 1 || '' -%></td>
-            <td class="td text-start" style="max-width: 80px"><%- user.uid -%></td>
-            <td class="td"><%- user.displayName || '' -%></td>
-            <td class="td"><%- user.email || '' -%></td>
-            <td class="td"><%- user.phoneNumber || '' -%></td>
-            <td class="td"><%- user.photoUrl || '' -%></td>
-            <td class="td"><%- user.provider || '' -%></td>
-            <td class="td"><%- user.metadata.creationTime || '' -%></td>
-            <td class="td"><%- user.metadata.lastSignInTime || '' -%></td>
-            <td class="td">
-              <%if(user.admin){%>
-              <i class="fas fa-check text-success" style="font-size: 1.2rem"></i>
-              <%} else {%>
-              <i class="fas fa-times text-danger" style="font-size: 1.2rem"></i>
-              <%}%>
-            </td>
-          </tr>
-          <% }) %> <%}%>
-        </tbody>
-      </table>
-    </div>
-  </div>
+	<div class="card shadow rounded m-0 p-0 w-100 border-0">
+		<div class="card-body text-start">
+			<table
+				id="dtBasic"
+				class="table table-striped table-bordered display compact table-hover table-auto table-responsive"
+				cellspacing="0"
+				width="100%"
+			>
+				<thead class="table-headers text-center">
+					<tr>
+						<th class="th">Nr</th>
+						<th class="th">uid</th>
+						<th class="th">Name</th>
+						<th class="th">Email</th>
+						<th class="th">Phone Number</th>
+						<th class="th">Photo URL</th>
+						<th class="th">Provider</th>
+						<th class="th">Creation Time</th>
+						<th class="th">Last Login</th>
+						<th class="th">Admin</th>
+					</tr>
+				</thead>
+				<tbody class="table-text text-center">
+					<% if(users){ %> <% users.map((user,index) => { %>
+					<tr class="table-row" id='<%= "table-row-"+ index %>' style="cursor: pointer">
+						<td class="td"><%- index + 1 || '' -%></td>
+						<td class="td text-start" style="max-width: 80px"><%- user.uid -%></td>
+						<td class="td"><%- user.displayName || '' -%></td>
+						<td class="td"><%- user.email || '' -%></td>
+						<td class="td"><%- user.phoneNumber || '' -%></td>
+						<% if(user.photoURL){ %>
+						<td class="td justify-content-center" style="max-width: 180px">
+							<a class="text-center justify-content-center" href="<%- user.photoURL || ' ' -%>">
+								<i class="bi bi-link" style="font-size: 20px"></i>
+							</a>
+						</td>
+						<% } else { %>
+						<td class="td" style="max-width: 180px"></td>
+						<% } %>
+						<td class="td"><%- user.provider || '' -%></td>
+						<td class="td"><%- user.metadata.creationTime || '' -%></td>
+						<td class="td"><%- user.metadata.lastSignInTime || '' -%></td>
+						<td class="td">
+							<%if(user.admin){%>
+							<i class="fas fa-check text-success" style="font-size: 1.2rem"></i>
+							<%} else {%>
+							<i class="fas fa-times text-danger" style="font-size: 1.2rem"></i>
+							<%}%>
+						</td>
+					</tr>
+					<% }) %> <%}%>
+				</tbody>
+			</table>
+		</div>
+	</div>
 </section>
