--- a/views/components/Toast.ejs
+++ b/views/components/Toast.ejs
@@ -1,17 +1,19 @@
 <%if (isLogedIn) { %>
-    <div class="position-absolute top-0 end-0 p-3 mt-5 me-1" style="z-index: 1001">
-      <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true"'>
-        <div class="toast-header">
-          <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-        </div>
-      <div class="toast-body">
-        <p>Are you sure you want to log out?</p>
-        <div class='flex-row'>
-          <button type="button" class="btn btn-outline-danger btn-toast" data-bs-dismiss="toast" aria-label="Close">Cancel</button>
-          <button class='btn btn-outline-success btn-toast' id='logout' >Yes</button>
-        </div>
-      </div>
-    </div>
-  </div>
+<div class="position-absolute top-0 end-0 p-3 mt-5 me-1" style="z-index: 1001">
+	<div id="logout-toast" class="toast bg-gradient" role="alert" aria-live="assertive" aria-atomic="true">
+		<div class="toast-header d-flex flex-row justify-content-between bg-gradient" id="toast-header">
+			<i class="fas fa-exclamation-triangle text-warning"></i>
+			<button type="button" class="btn-close btn-close-white" data-bs-dismiss="toast" aria-label="Close"></button>
+		</div>
+		<div class="toast-body bg-gradient">
+			<p>Are you sure you want to log out?</p>
+			<div class="d-flex flex-row justify-content-between">
+				<button type="button" id="btn-cancel" class="btn btn-toast border-0" data-bs-dismiss="toast" aria-label="Close">
+					Cancel
+				</button>
+				<button class="btn btn-toast border-0" id="btn-logout">Yes</button>
+			</div>
+		</div>
+	</div>
+</div>
 <%} %>
-
