--- a/views/sender.ejs
+++ b/views/sender.ejs
@@ -1,59 +1,62 @@
 <section>
-  <div class="card align-self-center shadow bg-body rounded border-0" style="width: 30rem">
-    <div class="card-body text-start">
-      <h5 class="card-title text-center"><strong>Who do you want to send a message to?</strong></h5>
-      <form class="form mt-4 has-validation text-black" novalidate id="message-form">
-        <%- include('./components/MailingList'); -%> <%- include('./components/Message'); -%> <%-
-        include('./components/Schedule'); -%>
+	<div class="card align-self-center shadow border-0" style="width: 30rem">
+		<div class="card-body text-start">
+			<h5 class="card-title text-center"><strong>Who do you want to send a message to?</strong></h5>
+			<form class="form mt-4 has-validation text-black" novalidate id="message-form">
+				<%- include('./components/MailingList'); -%> <%- include('./components/Message'); -%> <%-
+				include('./components/Schedule'); -%>
 
-        <div class="text-center mt-4" id="btn-cont" style="width: 90%">
-          <button
-            type="submit"
-            class="btn btn-primary border-0"
-            id="email"
-            style="background-color: #dd4b39; min-width: 6rem"
-            role="button"
-            disabled
-          >
-            <i class="fab fa-google"></i>
-          </button>
+				<div class="text-center mt-4" id="btn-cont" style="width: 90%">
+					<button
+						type="submit"
+						class="btn btn-primary border-0 add-tooltip"
+						id="email"
+						style="background-color: #dd4b39; min-width: 6rem"
+						role="button"
+						disabled
+						title="Send Email"
+					>
+						<i class="fab fa-google"></i>
+					</button>
 
-          <button
-            type="submit"
-            class="btn btn-primary border-0"
-            id="whatsapp"
-            style="background-color: #25d366; min-width: 6rem"
-            role="button"
-            disabled
-          >
-            <i class="fab fa-whatsapp"></i>
-          </button>
-          <button
-            type="submit"
-            class="btn btn-primary border-0"
-            id="sms"
-            style="min-width: 6rem"
-            role="button"
-            disabled
-          >
-            <i class="fas fa-sms"></i>
-          </button>
-        </div>
-      </form>
-    </div>
-  </div>
+					<button
+						type="submit"
+						class="btn btn-primary border-0 add-tooltip"
+						id="whatsapp"
+						style="background-color: #25d366; min-width: 6rem"
+						role="button"
+						disabled
+						title="Send WhatsApp Message"
+					>
+						<i class="fab fa-whatsapp"></i>
+					</button>
+					<button
+						type="submit"
+						class="btn btn-primary border-0 add-tooltip"
+						id="sms"
+						style="min-width: 6rem"
+						role="button"
+						disabled
+						title="Send SMS"
+					>
+						<i class="fas fa-sms"></i>
+					</button>
+				</div>
+			</form>
+		</div>
+	</div>
 </section>
 <footer>
-  <p><strong>*</strong>This page is private and protected</p>
+	<p><strong>*</strong>This page is private and protected</p>
 </footer>
 
 <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
-  <div id="notification" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-    <div class="toast-header text-light" id="message-toast-header">
-      <strong class="me-auto">New notification</strong>
-      <small>Just Now</small>
-      <button type="button" class="btn-close btn-close-white" data-bs-dismiss="toast" aria-label="Close"></button>
-    </div>
-    <div class="toast-body text-light" id="toast-text"></div>
-  </div>
+	<div id="notification" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+		<div class="toast-header text-light" id="message-toast-header">
+			<strong class="me-auto">New notification</strong>
+			<small>Just Now</small>
+			<button type="button" class="btn-close btn-close-white" data-bs-dismiss="toast" aria-label="Close"></button>
+		</div>
+		<div class="toast-body text-light" id="toast-text"></div>
+	</div>
 </div>
